tests/fixtures/invalid/bool_le_bytes.py
# Cannot compare with <= Bool and Bytes
x: bool = True <= b"hello"
